# pytorch-black-belt

./: .gitignore  01_Storage_vs_View.ipynb  02_Broadcasting_Magic.ipynb  03_Einsum_Is_All_You_Need.ipynb  04_Advanced_Indexing.ipynb  05_In_Place_Operations.ipynb  06_Einops_Tutorial.ipynb  07_Named_Tensors.ipynb  08_Computational_Graph_Viz.ipynb  09_Requires_Grad_Mechanics.ipynb  10_Custom_Autograd_Function.ipynb  11_Jacobian_and_Hessian.ipynb  12_Retain_Graph_Trick.ipynb  13_Gradient_Accumulation.ipynb  14_Forward_Mode_AD.ipynb  15_Dataset_vs_IterableDataset.ipynb  16_Custom_Collate_Fn.ipynb  17_Samplers_and_Imbalance.ipynb  18_Num_Workers_and_Pin_Memory.ipynb  19_Data_Augmentation_GPU.ipynb  20_WebDataset_Concept.ipynb  21_Module_Life_Cycle.ipynb  22_Buffers_vs_Parameters.ipynb  23_Hooks_Anatomy.ipynb  24_Weight_Initialization.ipynb  25_Weight_Sharing.ipynb  26_Dynamic_Control_Flow.ipynb  27_Gradient_Checkpointing.ipynb  28_Model_Surgery.ipynb  29_Optimizer_Internals.ipynb  30_Learning_Rate_Schedulers.ipynb  31_Mixed_Precision_AMP.ipynb  32_Gradient_Clipping.ipynb  33_Torch_Compile_Intro.ipynb  34_Bottleneck_Analysis.ipynb  35_Weight_Decay_vs_L2.ipynb  36_Reproducibility_Seeding.ipynb  37_PyTorch_Lightning_Refactor.ipynb  38_TensorBoard_Logging.ipynb  39_TorchScript_Tracing.ipynb  (+18 more)
notebooks/: 01_Storage_vs_View.ipynb  02_Broadcasting_Magic.ipynb  03_Einsum_Is_All_You_Need.ipynb  04_Advanced_Indexing.ipynb  05_In_Place_Operations.ipynb  06_Einops_Tutorial.ipynb  07_Named_Tensors.ipynb  08_Computational_Graph_Viz.ipynb  09_Requires_Grad_Mechanics.ipynb  10_Custom_Autograd_Function.ipynb  11_Jacobian_and_Hessian.ipynb  12_Retain_Graph_Trick.ipynb  13_Gradient_Accumulation.ipynb  14_Forward_Mode_AD.ipynb  15_Dataset_vs_IterableDataset.ipynb  16_Custom_Collate_Fn.ipynb  17_Samplers_and_Imbalance.ipynb  18_Num_Workers_and_Pin_Memory.ipynb  19_Data_Augmentation_GPU.ipynb  20_WebDataset_Concept.ipynb  21_Module_Life_Cycle.ipynb  22_Buffers_vs_Parameters.ipynb  23_Hooks_Anatomy.ipynb  24_Weight_Initialization.ipynb  25_Weight_Sharing.ipynb  26_Dynamic_Control_Flow.ipynb  27_Gradient_Checkpointing.ipynb  28_Model_Surgery.ipynb  29_Optimizer_Internals.ipynb  30_Learning_Rate_Schedulers.ipynb  31_Mixed_Precision_AMP.ipynb  32_Gradient_Clipping.ipynb  33_Torch_Compile_Intro.ipynb  34_Bottleneck_Analysis.ipynb  35_Weight_Decay_vs_L2.ipynb  36_Reproducibility_Seeding.ipynb  37_PyTorch_Lightning_Refactor.ipynb  38_TensorBoard_Logging.ipynb  39_TorchScript_Tracing.ipynb  40_TorchScript_Scripting.ipynb  (+10 more)
