[project]
name = "pytorch-black-belt"
version = "0.1.0"
description = "The road to engineering mastery. A deep-dive guide into PyTorch mechanics, memory optimization, custom layers, and production-grade pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "lightning>=2.6.0",
    "tensorboard>=2.20.0",
    "torch",
    "torchaudio",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
