[project]
name = "pytorch-black-belt"
version = "0.1.0"
description = "The road to engineering mastery. A deep-dive guide into PyTorch mechanics, memory optimization, custom layers, and production-grade pipelines."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Core Data Science & Math ---
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    # --- Visualization ---
    "matplotlib",
    "seaborn",
    # --- Classical ML & Explainability ---
    "scikit-learn",
    "xgboost",
    "mlxtend",
    "shap",
    "optuna",
    # --- Deep Learning Core (PyTorch Ecosystem) ---
    "torch",
    "torchvision",
    "torchaudio",
    "lightning",
    "torchmetrics",
    "torchviz",
    "kornia", # Augmentacja na GPU
    # --- NLP, LLM & RAG ---
    "transformers",
    "tiktoken",
    "openai",
    "ragas",
    "datasets",
    "langchain",
    "langchain-core",
    "langchain-google-genai",
    # --- Deployment, Formats & Big Data ---
    "onnx",
    "onnxruntime",
    "onnxscript",
    "webdataset",
    "joblib",
    # --- Reinforcement Learning & Graphs ---
    "gymnasium",
    "networkx",
    # --- Utilities & Jupyter Environment ---
    "ipykernel",
    "notebook",
    "ipywidgets",
    "python-dotenv",
    "nest_asyncio",
    "tqdm",
    "higher>=0.2.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
